add api seat type
